made social icons align in mobile view - also fixed search box width
fixes #471

--- a/css/less/misc.less
+++ b/css/less/misc.less
@@ -104,7 +104,7 @@ input[type="submit"]:focus {
 }
 
 input[type="text"] {
-	width: 97%;
+	width: 95%;
 }
 
 
