--- a/css/less/theme-responsive.less
+++ b/css/less/theme-responsive.less
@@ -134,8 +134,8 @@
 	/* make the menu pretty while in dropdown */
 	#social-networking {
 		position: absolute;
-		top: -4px;
-		right: 20px;
+		top: 5px;
+		right: 10px;
 		margin-right: 0;
 	}
 		
@@ -252,21 +252,28 @@
 		padding-left: 20px;
 	}
 	
-	#footer .container {
-		padding-right: 0;
-		padding-left: 0;
-	}
+	#footer {
 	
-	#footer #footer-links {
-		float: none;
-		padding: 0 20px;
-	}
+		#sub-floor {
 	
-	#footer #credit {
-		float: none;
-		padding: 0 20px;
-		text-align: center;
-	}
+			.container {
+				padding-right: 0;
+				padding-left: 0;
+			}
+			
+			#footer-links {
+				float: none;
+				padding: 0 20px;
+			}
+			
+			#credit {
+				float: none;
+				padding: 0 20px;
+				text-align: center;
+			}
+		}//sub-floor
+		
+	}//footer
 	
 	/* post format status */
 	.post.format-status .post-avatar {
